[package]
name = "makejson"
version = "0.1.0"
authors = ["mparaz <mparaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
rand = "0.7"
base64 = "0.12.0"
argparse = "0.2.2"

